[package]
name = "hpm-rt"
version = "0.1.0"
rust-version = "1.59"
repository = "https://github.com/hpm-rs/hpm-rt"
authors = ["JasonTan <tfx2001@outlook.com>"]
categories = ["embedded", "no-std"]
description = "Minimal runtime / startup for HPMicro MCUs"
keywords = ["riscv", "runtime", "startup"]
license = "MIT"
edition = "2021"

[dependencies]
cfg-if = "1.0.0"
r0 = "1.0.0"
riscv = "0.10"
riscv-rt-macros = { path = "macros", version = "0.2.0" }

[dev-dependencies]
panic-halt = "0.2.0"

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc", "riscv32imac-unknown-none-elf"]
